--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,7 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
-        "laravolt/indonesia": "^0.34.0",
-        "thiagoalessio/tesseract_ocr": "*",
-        "yajra/laravel-datatables-oracle": "^10.11"
+        "laravolt/indonesia": "^0.34.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
