--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
         "laravolt/indonesia": "^0.34.0",
+        "maatwebsite/excel": "^3.1",
         "yajra/laravel-datatables-oracle": "^10.11"
     },
     "require-dev": {
